# mqtt-azure

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/esp-cryptoauthlib/cryptoauthlib/: LICENSE
main/: CMakeLists.txt  hello_world_main.c  main.c  wifi.c  wifi.h
